src/test/deca/syntax/valid/created/affect_NULL/BOOLEAN.deca
// Description:
//		Affecter null a un boolean
// Resultats:
//		OK

{
	boolean x = null;
}
