src/test/deca/syntax/invalid/created/no_init_but_value/boolean.deca
// Description:
//      Pas d'initialisation mais valeur donnee
// Resultats:
//      Error Ligne 7 : extraneous input 'true' expecting ';'

{
    boolean x true;
}